project(CPPIntro)

cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


add_executable(lect_1 lect_1.cpp)
add_executable(data_types data_types.cpp)
add_executable(array array.cpp)
add_executable(pointer pointer.cpp)
add_executable(struct struct.cpp)
add_executable(class class.cpp)
add_executable(enum enum.cpp)
add_executable(const_example const_example.cpp)
add_executable(io_example io_example.cpp)
add_executable(error_handling error_handling.cpp)
add_executable(assignment_1 assignment_1.cpp)
add_executable(passing_by_value_or_reference passing_by_value_or_reference.cpp)
add_executable(return_value return_value.cpp)
add_executable(return_pointer return_pointer.cpp)
add_executable(std_vector std_vector.cpp)
add_executable(return_reference return_reference.cpp)
add_executable(default_value_param default_value_param.cpp)